--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <!-- Top section: Money should Come -->
+    <!-- Bottom section: Money should Come -->
     <LinearLayout
         android:id="@+id/layoutMoneyShouldCome"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp"/>
+        android:paddingTop="8dp"/>
 
     <!-- Divider line -->
     <View
@@ -21,11 +21,12 @@
         android:background="#80000000"
         android:layout_marginVertical="10dp"/>
 
-    <!-- Bottom section: I have to Pay -->
+    <!-- Top section: I have to Pay -->
     <LinearLayout
         android:id="@+id/layoutIHaveToPay"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"/>
+        android:paddingBottom="8dp"/>
+
 </LinearLayout>
