--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <!-- Money should Come section -->
+    <!-- "Money should Come" section -->
     <LinearLayout
         android:id="@+id/layoutMoneyShouldCome"
         android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingEnd="8dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"/>
 
-    <!-- Vertical Divider -->
+    <!-- Divider line -->
     <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
         android:background="#80000000"
-        android:layout_marginHorizontal="10dp"/>
+        android:layout_marginVertical="10dp"/>
 
-    <!-- I have to Pay section -->
+    <!-- "I have to Pay" section -->
     <LinearLayout
         android:id="@+id/layoutIHaveToPay"
         android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingStart="8dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"/>
+
 </LinearLayout>
