--- a/app/src/main/res/layout/fragment_given.xml
+++ b/app/src/main/res/layout/fragment_given.xml
@@ -4,17 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
+    
     <EditText
         android:id="@+id/editTextName"
         android:hint="Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    
     <EditText
         android:id="@+id/editTextAmount"
         android:hint="Amount"
         android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/editTextNote"
+        android:hint="Note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    
     <Button
         android:id="@+id/buttonAdd"
         android:text="Add"
