--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
-<color name="background_dark">#23223C</color>
-<color name="box_dark">#302F4D</color>
-<color name="box_header">#393862</color>
-<color name="button_orange">#FF8C00</color>
-<color name="white">#FFFFFF</color>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <color name="primary_color">#FF8800</color>
+    <color name="button_orange">#FF8800</color>
+    <color name="background_dark">#232345</color>
+    <color name="card_light">#F8FFF3</color>
+    <color name="border_grey">#BFBFBF</color>
+    <color name="danger_red">#EA4444</color>
+    <color name="title_green">#A0FFA0</color>
+    <color name="divider_grey">#D1D1D1</color>
+    <!-- Add other colors as needed -->
+</resources>
