--- a/app/src/main/res/layout/fragment_given.xml
+++ b/app/src/main/res/layout/fragment_given.xml
@@ -1,49 +1,68 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="#23223C"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutGiven"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp">
+    android:orientation="vertical"
+    android:background="#232345"
+    android:paddingTop="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
-    <TextView
-        android:id="@+id/moneyShouldComeTitle"
-        android:text="Money should Come"
+    <EditText
+        android:id="@+id/editTextName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_box_dark"
+        android:hint="Name"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:paddingBottom="8dp"/>
+        android:textColorHint="#888CA7"
+        android:textSize="16sp" />
 
-    <LinearLayout
-        android:id="@+id/layoutMoneyShouldCome"
-        android:orientation="vertical"
+    <EditText
+        android:id="@+id/editTextAmount"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#393862"
-        android:layout_marginVertical="10dp"/>
-
-    <TextView
-        android:id="@+id/iHaveToPayTitle"
-        android:text="I have to Pay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_box_dark"
+        android:hint="Amount"
+        android:inputType="number"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"/>
+        android:textColorHint="#888CA7"
+        android:textSize="16sp" />
 
-    <LinearLayout
-        android:id="@+id/layoutIHaveToPay"
-        android:orientation="vertical"
+    <EditText
+        android:id="@+id/editTextNote"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="48dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/rounded_box_dark"
+        android:hint="Note"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#888CA7"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/buttonAdd"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/orange_rounded_button"
+        android:text="ADD"
+        android:textAllCaps="true"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:textSize="18sp" />
+
 </LinearLayout>
