--- a/app/src/main/res/drawable/orange_rounded_button.xml
+++ b/app/src/main/res/drawable/orange_rounded_button.xml
@@ -1,5 +1,5 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#FF8800"/>
     <corners android:radius="24dp"/>
 </shape>
