--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -6,9 +6,50 @@
     android:padding="16dp">
 
     <LinearLayout
-        android:id="@+id/summary_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/summaryHeader1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Money should Come"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="8dp"
+            android:paddingBottom="4dp"/>
+
+        <LinearLayout
+            android:id="@+id/layoutMoneyShouldCome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#393862"
+            android:layout_marginVertical="10dp"/>
+
+        <TextView
+            android:id="@+id/summaryHeader2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="I have to Pay"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="8dp"
+            android:paddingBottom="4dp"/>
+
+        <LinearLayout
+            android:id="@+id/layoutIHaveToPay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </LinearLayout>
 </ScrollView>
