--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -1,55 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#232345"
-    android:padding="16dp">
+    android:background="#232345">
 
-    <LinearLayout
+    <!-- Delete icon at top-right -->
+    <ImageButton
+        android:id="@+id/btnDeleteAccounts"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_delete"
+        android:contentDescription="Delete Account" />
+
+    <!-- Main content scrollable below icon -->
+    <ScrollView
+        android:id="@+id/scrollViewSummary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/summaryHeader1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Money should Come"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="8dp"
-            android:paddingBottom="4dp"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/btnDeleteAccounts"
+        android:padding="16dp">
 
         <LinearLayout
-            android:id="@+id/layoutMoneyShouldCome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#393862"
-            android:layout_marginVertical="10dp"/>
+            <TextView
+                android:id="@+id/summaryHeader1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Money should Come"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="8dp"
+                android:paddingBottom="4dp"/>
 
-        <TextView
-            android:id="@+id/summaryHeader2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="I have to Pay"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="8dp"
-            android:paddingBottom="4dp"/>
+            <LinearLayout
+                android:id="@+id/layoutMoneyShouldCome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
 
-        <LinearLayout
-            android:id="@+id/layoutIHaveToPay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </LinearLayout>
-</ScrollView>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#393862"
+                android:layout_marginVertical="10dp"/>
+
+            <TextView
+                android:id="@+id/summaryHeader2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="I have to Pay"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="8dp"
+                android:paddingBottom="4dp"/>
+
+            <LinearLayout
+                android:id="@+id/layoutIHaveToPay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
