--- a/app/src/main/res/drawable/account_card_bg_for_transaction_tab.xml
+++ b/app/src/main/res/drawable/account_card_bg_for_transaction_tab.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F8FFF3"/> <!-- or your preferred card color -->
+    <solid android:color="#2E3147"/> <!-- or your preferred card color -->
     <corners 
         android:topLeftRadius="20dp" 
         android:topRightRadius="20dp" 
