--- a/app/src/main/res/drawable/ic_arrow_up_red.xml
+++ b/app/src/main/res/drawable/ic_arrow_up_red.xml
@@ -1,21 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="32dp" android:height="32dp"
     android:viewportWidth="32" android:viewportHeight="32">
-    <!-- White circle with red border -->
-    <path
+    <!-- White circle with red border (fully round) -->
+    <circle
+        android:cx="16"
+        android:cy="16"
+        android:r="14"
         android:fillColor="#FFFFFFFF"
-        android:pathData="M16,2
-                          A14,14 0 1,1 2,16
-                          A14,14 0 1,1 16,2Z"
-        />
-    <path
-        android:fillColor="#00000000"
         android:strokeColor="#FFEA4444"
-        android:strokeWidth="2"
-        android:pathData="M16,2
-                          A14,14 0 1,1 2,16
-                          A14,14 0 1,1 16,2Z"
-        />
+        android:strokeWidth="2"/>
     <!-- Thick red up arrow -->
     <path
         android:fillColor="#FFEA4444"
