--- a/app/src/main/res/drawable/rounded_box_dark.xml
+++ b/app/src/main/res/drawable/rounded_box_dark.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#c0b3cb"/>
     <corners android:radius="16dp"/>
+    <stroke android:width="2dp" android:color="#5b1a9e"/>
 </shape>
