--- a/app/src/main/res/drawable/rounded_box_dark.xml
+++ b/app/src/main/res/drawable/rounded_box_dark.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#E7DDFF"/>
+    <solid android:color="#f1f0f1"/>
     <corners android:radius="16dp"/>
-    <stroke android:width="2dp" android:color="#5b1a9e"/>
+    <stroke android:width="2dp" android:color="#e6e4e7"/>
 </shape>
