--- a/app/src/main/res/layout/fragment_given.xml
+++ b/app/src/main/res/layout/fragment_given.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#E7DDFF"
+    android:background="#f1f0f1"
     android:paddingTop="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
@@ -19,7 +19,7 @@
         android:hint="Name"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#5b1a9e"
+        android:textColor="#000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
@@ -34,7 +34,7 @@
         android:inputType="number"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#5b1a9e"
+        android:textColor="#000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
@@ -48,7 +48,7 @@
         android:hint="Note"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#5b1a9e"
+        android:textColor="#000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
