--- a/app/src/main/res/layout/fragment_received.xml
+++ b/app/src/main/res/layout/fragment_received.xml
@@ -12,11 +12,11 @@
         android:layout_height="48dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:background="@drawable/rounded_box_dark_received"
+        android:background="@drawable/rounded_box_dark"
         android:hint="Name"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
@@ -31,7 +31,7 @@
         android:inputType="number"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
@@ -45,7 +45,7 @@
         android:hint="Note"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#FFFFFF"
+        android:textColor="#0000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
