--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -36,7 +36,7 @@
                 android:text="Money should Come"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:layout_gravity="center_horizontal"
                 android:paddingTop="8dp"
                 android:paddingBottom="4dp"/>
@@ -81,7 +81,7 @@
                 android:text="I have to Pay"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:layout_gravity="center_horizontal"
                 android:paddingTop="8dp"
                 android:paddingBottom="4dp"/>
