--- a/app/src/main/res/layout/fragment_received.xml
+++ b/app/src/main/res/layout/fragment_received.xml
@@ -45,7 +45,7 @@
         android:hint="Note"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#0000000"
+        android:textColor="#000000"
         android:textColorHint="#888CA7"
         android:textSize="16sp" />
 
