--- a/app/src/main/res/drawable/rounded_box_dark.xml
+++ b/app/src/main/res/drawable/rounded_box_dark.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#FFFFFF"/>
     <corners android:radius="16dp"/>
-    <stroke android:width="2dp" android:color="#e6e4e7"/>
+    <stroke android:width="2dp" android:color="#636363"/>
 </shape>
