--- a/app/src/main/res/layout/fragment_given.xml
+++ b/app/src/main/res/layout/fragment_given.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#708090"
+    android:background="#c8dfea"
     android:paddingTop="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
