--- a/app/src/main/res/layout/fragment_received.xml
+++ b/app/src/main/res/layout/fragment_received.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#c8dfea"
+    android:background="#f0f6fb"
     android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
