--- a/app/src/main/res/layout/fragment_received.xml
+++ b/app/src/main/res/layout/fragment_received.xml
@@ -6,6 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Top bar with global BC three-dots menu -->
+    <LinearLayout
+        android:id="@+id/topBarGiven"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="right|center_vertical"
+        android:paddingBottom="4dp">
+
+        <ImageButton
+            android:id="@+id/btnMoreTopGiven"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_more_vert"   <!-- your 3-dots icon -->
+            android:contentDescription="More BC options" />
+    </LinearLayout>
+
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
