--- a/app/src/main/res/layout/fragment_given.xml
+++ b/app/src/main/res/layout/fragment_given.xml
@@ -23,7 +23,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_more_vert"   <!-- your 3-dots icon -->
+            android:src="@drawable/ic_more_vert"
             android:contentDescription="More BC options" />
     </LinearLayout>
 
