--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="danger_red">#EA4444</color>
     <color name="title_green">#A0FFA0</color>
     <color name="divider_grey">#D1D1D1</color>
+    <color name="emi_paid_text">#2E7D32</color> <!-- dark green -->
     <!-- Add other colors as needed -->
 </resources>
